tests/deploy_errors/pipeline_bad_query/error.txt
Error: 
    5 |     badger = "snot",
    6 |   pipeline
    7 |     dark horse
      |     ^^^^ Found the token `dark` but expected one of `#!config`, `<doc-comment>`, `create`, `define`, `select`, `use`
    8 |   end;
    9 | end;
